plugins {
	id 'org.springframework.boot' version '3.5.3' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
	group = 'com.knusrae'
	version = '0.0.1-SNAPSHOT'

	repositories {
		mavenCentral()
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'

	java {
		sourceCompatibility = JavaVersion.VERSION_21
		targetCompatibility = JavaVersion.VERSION_21

		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}

	tasks.withType(JavaCompile).configureEach {
		options.encoding = 'UTF-8'
	}

	tasks.named('test') {
		useJUnitPlatform()
	}

	dependencies {
		implementation 'org.postgresql:postgresql:42.6.0'
	}
}